[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 364 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 364 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 464, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 464, 16 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Creatures" type="Node" parent="."]

[node name="Borders" type="Node" parent="."]

[node name="RightBorder" type="Area2D" parent="Borders"]
position = Vector2( -48, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/RightBorder"]
shape = SubResource( 1 )

[node name="LeftBorder" type="Area2D" parent="Borders"]
position = Vector2( 848, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/LeftBorder"]
shape = SubResource( 2 )

[node name="TopBorder" type="Area2D" parent="Borders"]
position = Vector2( 400, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/TopBorder"]
shape = SubResource( 3 )

[node name="BottomBorder" type="Area2D" parent="Borders"]
position = Vector2( 400, 648 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BottomBorder"]
shape = SubResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 662.829
margin_top = 560.375
margin_right = 782.829
margin_bottom = 580.375
text = "Reset Simulation"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Borders/RightBorder" to="." method="_on_RightBorder_body_entered"]
[connection signal="body_entered" from="Borders/LeftBorder" to="." method="_on_LeftBorder_body_entered"]
[connection signal="body_entered" from="Borders/TopBorder" to="." method="_on_TopBorder_body_entered"]
[connection signal="body_entered" from="Borders/BottomBorder" to="." method="_on_BottomBorder_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
